# sonnet-repo

./: .gitignore  README.md  install.ps1  main.py  pyproject.toml  requirements.txt  run.ps1
adapters/: invariant.py  lora.py  low_rank.py  sync_backend.py
api/: server.py
config/: default.yaml
core/: goals.py  journal.py  process.py  state.py
daemon/: heartbeat.py  supervisor.py
docs/: README.md
inference/: engine.py  providers.py
memory/: cold.py  consolidator.py  embedding.py  embeddings.py  hot.py  warm.py
project/: __init__.py  continuity.py
scripts/: install_user.ps1  smoke_api.py  smoke_install.ps1  smoke_mystro_table_sync.py  smoke_ollama_qwen.py  smoke_supervisor.py  start_supervisor.ps1
tests/: test_adapters.py  test_api_smoke.py  test_continuity.py  test_core.py  test_embeddings.py  test_inference.py  test_integration.py  test_memory.py  test_project_continuity.py  test_providers.py
